Styling edits for smaller screen

--- a/sass/global/_colours.scss
+++ b/sass/global/_colours.scss
@@ -3,4 +3,5 @@ $colour-white: #fff;
 $colour-brightblue: #0076E0;
 $colour-navy: #004A82;
 $colour-scarlet: #D61900;
+$colour-rouge: #8A1100;
 $colour-pink: #e31d3b;
