--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ img {
 
 .nav__item {
   display: inline-block;
-  padding: 0 5px;
+  padding: 0 9px;
   font-size: 15px;
   font-size: 1.5rem;
   line-height: 19px;
@@ -167,6 +167,12 @@ img {
       font-size: 1.8rem;
       line-height: 25px;
       line-height: 2.5rem; } }
+  @media (min-width: 1500px) {
+    .nav__item {
+      font-size: 20px;
+      font-size: 2rem;
+      line-height: 27px;
+      line-height: 2.7rem; } }
 
 .nav__link {
   color: #fff;
@@ -187,14 +193,14 @@ img {
       background-size: cover;
       background-position-x: right;
       height: 600px;
-      paddding: 0; } }
+      padding: 0; } }
   @media (min-width: 1024px) {
     .hero {
+      background-image: url("../img/bg__hero--widescreen.jpg");
       height: calc(100vh - 75px);
       max-height: 700px; } }
   @media (min-width: 1500px) {
     .hero {
-      background-image: url("../img/bg__hero--widescreen.jpg");
       max-height: 900px; } }
   @media (min-width: 1700px) {
     .hero {
@@ -212,12 +218,12 @@ img {
       position: relative;
       top: 50%;
       transform: translateY(-50%);
-      width: 50%;
+      width: 48%;
       padding: 40px;
       margin: 0 20px;
       opacity: 0.9;
       max-width: none;
-      filter: drop-shadow(-2px 0px 3px rgba(0, 0, 0, 0.4)); } }
+      filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.4)); } }
   @media (min-width: 1024px) {
     .hero__text {
       width: 42%;
@@ -292,10 +298,10 @@ img {
       line-height: 4rem; } }
 
 .hero__intro {
-  font-size: 20px;
-  font-size: 2rem;
-  line-height: 28px;
-  line-height: 2.8rem; }
+  font-size: 19px;
+  font-size: 1.9rem;
+  line-height: 27px;
+  line-height: 2.7rem; }
   @media (min-width: 500px) {
     .hero__intro {
       font-size: 22px;
@@ -330,12 +336,18 @@ img {
       padding: 20px 25px 0; } }
 
 .about__keypoint {
-  font-size: 17px;
-  font-size: 1.7rem;
+  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 22px;
   line-height: 2.2rem;
   margin-bottom: 30px; }
   @media (min-width: 400px) {
+    .about__keypoint {
+      font-size: 18px;
+      font-size: 1.8rem;
+      line-height: 24px;
+      line-height: 2.4rem; } }
+  @media (min-width: 500px) {
     .about__keypoint {
       font-size: 20px;
       font-size: 2rem;
@@ -343,16 +355,16 @@ img {
       line-height: 2.7rem; } }
   @media (min-width: 768px) {
     .about__keypoint {
-      font-size: 23px;
-      font-size: 2.3rem;
-      line-height: 30px;
-      line-height: 3rem; } }
-  @media (min-width: 1700px) {
-    .about__keypoint {
-      font-size: 24px;
-      font-size: 2.4rem;
+      font-size: 22px;
+      font-size: 2.2rem;
       line-height: 29px;
       line-height: 2.9rem; } }
+  @media (min-width: 1024px) {
+    .about__keypoint {
+      font-size: 20px;
+      font-size: 2rem;
+      line-height: 27px;
+      line-height: 2.7rem; } }
 
 .about__bullet {
   font-size: 20px;
@@ -367,10 +379,8 @@ img {
 
 .about__bullet-text {
   display: inline-block;
-  vertical-align: middle; }
-  @media (min-width: 400px) {
-    .about__bullet-text {
-      width: calc(100% - 40px); } }
+  vertical-align: middle;
+  width: calc(100% - 40px); }
 
 /* About bio */
 .about__bio {
@@ -388,32 +398,38 @@ img {
       padding: 70px 40px 45px; } }
   @media (min-width: 1700px) {
     .about__bio {
-      padding: 100px 40px 75px; } }
+      padding: 90px 40px 75px; } }
 
 .about__intro {
-  font-size: 17px;
-  font-size: 1.7rem;
+  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 22px;
   line-height: 2.2rem;
   margin-bottom: 25px; }
   @media (min-width: 400px) {
     .about__intro {
+      font-size: 18px;
+      font-size: 1.8rem;
+      line-height: 24px;
+      line-height: 2.4rem; } }
+  @media (min-width: 500px) {
+    .about__intro {
+      font-size: 19px;
+      font-size: 1.9rem;
+      line-height: 26px;
+      line-height: 2.6rem; } }
+  @media (min-width: 768px) {
+    .about__intro {
       font-size: 20px;
       font-size: 2rem;
       line-height: 27px;
       line-height: 2.7rem; } }
-  @media (min-width: 768px) {
+  @media (min-width: 1024px) {
     .about__intro {
-      font-size: 21px;
-      font-size: 2.1rem;
-      line-height: 28px;
-      line-height: 2.8rem; } }
-  @media (min-width: 1700px) {
-    .about__intro {
-      font-size: 23px;
-      font-size: 2.3rem;
-      line-height: 30px;
-      line-height: 3rem; } }
+      font-size: 19px;
+      font-size: 1.9rem;
+      line-height: 26px;
+      line-height: 2.6rem; } }
 
 #form {
   background-color: #0076E0;
@@ -615,7 +631,7 @@ img {
 .grid {
   font-size: 0; }
 
-@media (min-width: 1000px) {
+@media (min-width: 1024px) {
   .grid__flex-container {
     display: flex;
     flex-direction: row-reverse; } }
@@ -626,7 +642,7 @@ img {
   line-height: 21px;
   line-height: 2.1rem;
   background-color: #fff; }
-  @media (min-width: 1000px) {
+  @media (min-width: 1024px) {
     .grid__item {
       display: inline-block;
       vertical-align: top;
@@ -646,9 +662,12 @@ img {
   @media (min-width: 768px) {
     .grid__text {
       padding: 50px; } }
+  @media (min-width: 1024px) {
+    .grid__text {
+      padding: 40px 25px 40px 35px; } }
   @media (min-width: 1350px) {
     .grid__text {
-      padding: 80px; } }
+      padding: 70px 50px 70px 70px; } }
   @media (min-width: 1700px) {
     .grid__text {
       padding: 100px; } }
@@ -671,7 +690,7 @@ img {
     .grid__title {
       margin-bottom: 25px; } }
 
-@media (min-width: 1000px) and (max-width: 1149px) {
+@media (min-width: 1024px) and (max-width: 1229px) {
   .grid__title {
     font-size: 35px;
     font-size: 3.5rem;
@@ -682,7 +701,8 @@ img {
       font-size: 50px;
       font-size: 5rem;
       line-height: 60px;
-      line-height: 6rem; } }
+      line-height: 6rem;
+      margin-bottom: 35px; } }
 
 .grid__intro {
   font-size: 17px;
@@ -696,23 +716,32 @@ img {
       font-size: 1.9rem;
       line-height: 27px;
       line-height: 2.7rem; } }
-
-@media (min-width: 1000px) and (max-width: 1149px) {
-  .grid__intro {
-    font-size: 17px;
-    font-size: 1.7rem;
-    line-height: 22px;
-    line-height: 2.2rem; } }
-
-@media (min-width: 1000px) and (max-width: 1149px) {
-  .grid__intro--extra {
-    display: none; } }
+  @media (min-width: 1024px) {
+    .grid__intro {
+      font-size: 18px;
+      font-size: 1.8rem;
+      line-height: 24px;
+      line-height: 2.4rem; } }
+  @media (min-width: 1230px) {
+    .grid__intro {
+      font-size: 18px;
+      font-size: 1.8rem; } }
   @media (min-width: 1500px) {
     .grid__intro {
-      font-size: 25px;
-      font-size: 2.5rem;
+      font-size: 19px;
+      font-size: 1.9rem;
+      line-height: 27px;
+      line-height: 2.7rem; } }
+  @media (min-width: 1700px) {
+    .grid__intro {
+      font-size: 24px;
+      font-size: 2.4rem;
       line-height: 32px;
       line-height: 3.2rem; } }
+
+@media (min-width: 1024px) and (max-width: 1229px) {
+  .grid__intro--extra {
+    display: none; } }
 
 .grid__list {
   margin-bottom: 25px;
@@ -720,7 +749,7 @@ img {
   list-style-position: outside;
   padding-left: 20px;
   margin-bottom: 40px; }
-  @media (min-width: 1500px) {
+  @media (min-width: 1700px) {
     .grid__list {
       margin-bottom: 60px; } }
 
@@ -730,24 +759,34 @@ img {
   line-height: 24px;
   line-height: 2.4rem;
   font-weight: 400;
-  padding-left: 10px; }
+  padding-left: 10px;
+  margin-bottom: 10px; }
   @media (min-width: 400px) {
     .grid__list-item {
       font-size: 19px;
       font-size: 1.9rem;
       line-height: 27px;
       line-height: 2.7rem; } }
-
-@media (min-width: 1000px) and (max-width: 1149px) {
-  .grid__list-item {
-    font-size: 17px;
-    font-size: 1.7rem;
-    line-height: 22px;
-    line-height: 2.2rem; } }
+  @media (min-width: 1024px) {
+    .grid__list-item {
+      font-size: 18px;
+      font-size: 1.8rem;
+      line-height: 24px;
+      line-height: 2.4rem; } }
+  @media (min-width: 1230px) {
+    .grid__list-item {
+      font-size: 18px;
+      font-size: 1.8rem; } }
   @media (min-width: 1500px) {
     .grid__list-item {
-      font-size: 25px;
-      font-size: 2.5rem;
+      font-size: 19px;
+      font-size: 1.9rem;
+      line-height: 27px;
+      line-height: 2.7rem; } }
+  @media (min-width: 1700px) {
+    .grid__list-item {
+      font-size: 24px;
+      font-size: 2.4rem;
       line-height: 32px;
       line-height: 3.2rem;
       margin-bottom: 20px; } }
@@ -770,49 +809,59 @@ img {
     background-color: #0076E0; }
   @media (min-width: 400px) {
     .grid__cta {
-      font-size: 25px;
-      font-size: 2.5rem;
+      font-size: 23px;
+      font-size: 2.3rem;
       padding: 15px 25px; } }
-
-@media (min-width: 1000px) and (max-width: 1149px) {
-  .grid__cta {
-    font-size: 21px;
-    font-size: 2.1rem; } }
-  @media (min-width: 1500px) {
+  @media (min-width: 1024px) {
     .grid__cta {
-      font-size: 32px;
-      font-size: 3.2rem;
+      font-size: 21px;
+      font-size: 2.1rem; } }
+  @media (min-width: 1230px) {
+    .grid__cta {
+      font-size: 23px;
+      font-size: 2.3rem; } }
+  @media (min-width: 1700px) {
+    .grid__cta {
+      font-size: 31px;
+      font-size: 3.1rem;
       padding: 20px 30px; } }
-
-.testimonial__wrapper {
-  max-width: 600px;
-  margin: 0 auto; }
 
 .testimonials {
   position: relative;
   background-color: #fff;
   padding: 40px 0 15px;
   font-size: 0; }
-  @media (min-width: 400px) {
+  @media (min-width: 768px) {
     .testimonials {
-      padding: 120px 0 85px; } }
+      padding: 30px 0 45px; } }
+  @media (min-width: 1024px) {
+    .testimonials {
+      padding: 100px 0 35px; } }
+  @media (min-width: 1500px) {
+    .testimonials {
+      padding: 100px 0 85px; } }
 
 .testimonials__title {
   font-size: 35px;
   font-size: 3.5rem;
   line-height: 40px;
   line-height: 4rem;
-  margin-bottom: 50px;
   padding: 0 25px;
   text-align: center;
   font-weight: 700;
-  color: #000; }
+  color: #000;
+  max-width: 500px;
+  margin: 0 auto 50px; }
   @media (min-width: 400px) {
     .testimonials__title {
       font-size: 40px;
       font-size: 4rem;
       line-height: 50px;
       line-height: 5rem; } }
+  @media (min-width: 768px) {
+    .testimonials__title {
+      max-width: none;
+      margin-bottom: 70px; } }
   @media (min-width: 1700px) {
     .testimonials__title {
       font-size: 50px;
@@ -822,28 +871,61 @@ img {
       margin-bottom: 80px; } }
 
 .testimonial {
-  font-size: 16px;
-  font-size: 1.6rem;
-  line-height: 24px;
-  line-height: 2.4rem;
+  font-size: 17px;
+  font-size: 1.7rem;
+  line-height: 25px;
+  line-height: 2.5rem;
   padding: 0 25px;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
   text-align: center; }
-  @media (min-width: 1024px) {
+  @media (min-width: 768px) {
     .testimonial {
       display: inline-block;
       vertical-align: top;
-      width: 33.333%;
+      width: 50%;
       padding: 0 40px;
       font-size: 17px;
-      font-size: 1.7rem; } }
+      font-size: 1.7rem;
+      line-height: 24px;
+      line-height: 2.4rem;
+      margin-bottom: 50px; } }
+  @media (min-width: 1200px) {
+    .testimonial {
+      width: 33.333%; } }
+  @media (min-width: 1500px) {
+    .testimonial {
+      font-size: 18px;
+      font-size: 1.8rem;
+      line-height: 27px;
+      line-height: 2.7rem;
+      padding: 0 60px;
+      margin-bottom: 80px; } }
   @media (min-width: 1700px) {
     .testimonial {
-      font-size: 21px;
-      font-size: 2.1rem;
+      font-size: 20px;
+      font-size: 2rem;
       line-height: 28px;
-      line-height: 2.8rem;
-      margin-bottom: 80px; } }
+      line-height: 2.8rem; } }
+  .testimonial:last-of-type {
+    margin-bottom: none; }
+    .testimonial:last-of-type .testimonial__wrapper {
+      border-bottom: none;
+      padding-bottom: none; }
+      @media (min-width: 768px) {
+        .testimonial:last-of-type .testimonial__wrapper {
+          border-bottom: 1px solid #efefef; } }
+      @media (min-width: 1024px) {
+        .testimonial:last-of-type .testimonial__wrapper {
+          border-bottom: none; } }
+
+.testimonial__wrapper {
+  max-width: 535px;
+  margin: 0 auto;
+  border-bottom: 1px solid #efefef;
+  padding-bottom: 45px; }
+  @media (min-width: 1024px) {
+    .testimonial__wrapper {
+      border-bottom: none; } }
 
 .testimonial__headline {
   font-size: 20px;
@@ -891,17 +973,21 @@ img {
 .contact {
   background-color: #0076E0;
   padding: 60px 20px; }
-  @media (min-width: 430px) {
-    .contact {
-      background-image: url("../img/bg__sunset--widescreen.jpg");
-      background-repeat: no-repeat;
-      background-size: cover; } }
   @media (min-width: 500px) {
     .contact {
-      padding: 40px; } }
+      background-image: url("../img/background-form--tablet.jpg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      padding: 80px 40px; } }
   @media (min-width: 768px) {
     .contact {
       padding: 135px 80px; } }
+  @media (min-width: 1024px) {
+    .contact {
+      background-image: url("../img/background-form--large.jpg"); } }
+  @media (min-width: 1300px) {
+    .contact {
+      background-image: url("../img/background-form--widescreen.jpg"); } }
   @media (min-width: 1500px) {
     .contact {
       padding: 200px 80px; } }
@@ -913,14 +999,14 @@ img {
   opacity: 1;
   color: #fff;
   text-align: center; }
-  @media (min-width: 430px) {
+  @media (min-width: 500px) {
     .contact__wrapper {
       margin: 0 auto;
       padding: 40px 40px 50px;
       background-color: #fff;
       color: #000;
       border-radius: 10px;
-      opacity: 0.9; } }
+      opacity: 0.85; } }
   @media (min-width: 600px) {
     .contact__wrapper {
       padding: 50px 20px 60px;
@@ -930,7 +1016,7 @@ img {
       max-width: 550px; } }
   @media (min-width: 1500px) {
     .contact__wrapper {
-      max-width: 650px; } }
+      max-width: 700px; } }
 
 .contact__header {
   font-size: 40px;
@@ -953,18 +1039,20 @@ img {
   font-size: 2.1rem;
   line-height: 28px;
   line-height: 2.8rem;
-  margin-bottom: 20px;
-  text-align: center; }
+  text-align: center;
+  max-width: 410px;
+  margin: 0 auto 20px; }
   @media (min-width: 600px) {
     .contact__intro {
       width: 80%;
-      margin: 0 auto 20px; } }
+      margin: 0 auto 20px;
+      max-width: none; } }
   .contact__intro:last-of-type {
     margin-bottom: 30px; }
   @media (min-width: 1500px) {
     .contact__intro {
-      font-size: 25px;
-      font-size: 2.5rem;
+      font-size: 23px;
+      font-size: 2.3rem;
       line-height: 32px;
       line-height: 3.2rem;
       margin: 0 auto 30px; }
@@ -984,9 +1072,10 @@ img {
   display: inline-block;
   vertical-align: middle;
   padding: 5px 20px;
+  border-radius: 5px;
   background-color: #fff;
   color: #000; }
-  @media (min-width: 430px) {
+  @media (min-width: 500px) {
     .contact__email,
     .contact__phone {
       background-color: #004A82;
