--- a/sass/modules/_grid.scss
+++ b/sass/modules/_grid.scss
@@ -3,7 +3,7 @@
 }
 
 .grid__flex-container {
-	@include media('>=1000px') {
+	@include media('>=desktop') {
 		display: flex;
 		flex-direction: row-reverse;
 	}
@@ -15,7 +15,7 @@
 	background-color: $colour-white;
 
 
-	@include media('>=1000px') {
+	@include media('>=desktop') {
 		display: inline-block;
 		vertical-align: top;
 		/* Set up squares */
@@ -40,8 +40,12 @@
 		padding: 50px;
 	}
 
+	@include media('>=desktop') {
+		padding: 40px 25px 40px 35px;
+	}
+
 	@include media('>=1350px') {
-		padding: 80px;
+		padding: 70px 50px 70px 70px;
 	}
 
 	@include media('>=1700px') {
@@ -65,7 +69,7 @@
 		margin-bottom: $vertical-rhythm;
 	}
 
-	@include media('>=1000px', '<1150px') {
+	@include media('>=desktop', '<1230px') {
 		@include font-size(35);
     	@include line-height(35);
 	}
@@ -73,6 +77,7 @@
 	@include media('>=1700px') {
 		@include font-size(50);
     	@include line-height(60);
+    	margin-bottom: 35px;
 	}
 }
 
@@ -86,20 +91,27 @@
     	@include line-height(27);
 	}
 
-	@include media('>=1000px', '<1150px') {
-		@include font-size(17);
-    	@include line-height(22);
+	@include media('>=desktop') {
+		@include font-size(18);
+    	@include line-height(24);
+	}
+	@include media('>=1230px') {
+		@include font-size(18);
+	}
+	@include media('>=1500px') {
+		@include font-size(19);
+    	@include line-height(27);
+	}
+
+	@include media('>=1700px') {
+		@include font-size(24);
+    	@include line-height(32);
 	}
 
 	&--extra {
-		@include media('>=1000px', '<1150px') {
+		@include media('>=desktop', '<1230px') {
 			display: none;
 		}
-	}
-
-	@include media('>=1500px') {
-		@include font-size(25);
-    	@include line-height(32);
 	}
 }
 
@@ -110,7 +122,7 @@
 	padding-left: 20px;
 	margin-bottom: 40px;
 
-	@include media('>=1500px') {
+	@include media('>=1700px') {
 		margin-bottom: 60px;
 	}
 }
@@ -120,19 +132,27 @@
     @include line-height(24);
     font-weight: $font-weight-normal;
     padding-left: 10px;
+    margin-bottom: 10px;
 
     @include media('>=400px') {
 		@include font-size(19);
     	@include line-height(27);
 	}
 
-    @include media('>=1000px', '<1150px') {
-		@include font-size(17);
-    	@include line-height(22);
+    @include media('>=desktop') {
+		@include font-size(18);
+    	@include line-height(24);
+	}
+	@include media('>=1230px') {
+		@include font-size(18);
+	}
+	@include media('>=1500px') {
+		@include font-size(19);
+    	@include line-height(27);
 	}
 
-	@include media('>=1500px') {
-		@include font-size(25);
+	@include media('>=1700px') {
+		@include font-size(24);
     	@include line-height(32);
     	margin-bottom: 20px;
 	}
@@ -157,16 +177,20 @@
     }
 
     @include media('>=400px') {
-    	@include font-size(25);
+    	@include font-size(23);
     	padding: 15px 25px;
     }
 
-    @include media('>=1000px', '<1150px') {
+    @include media('>=desktop'	) {
 		@include font-size(21);
 	}
 
-	@include media('>=1500px') {
-		@include font-size(32);
+	@include media('>=1230px') {
+		@include font-size(23);
+	}
+
+	@include media('>=1700px') {
+		@include font-size(31);
 		padding: 20px 30px;
 	}
 }
