--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -9,15 +9,15 @@
 		background-size: cover;
 		background-position-x: right;
 		height: 600px;
-		paddding: 0;
+		padding: 0;
 	}
 
 	@include media('>=desktop') {
+		background-image: url('../img/bg__hero--widescreen.jpg');
 		height: calc(100vh - 75px);
 		max-height: 700px;
 	}
 	@include media('>=1500px') {
-		background-image: url('../img/bg__hero--widescreen.jpg');
 		max-height: 900px;
 	}
 	@include media('>=1700px') {
@@ -37,12 +37,12 @@
 		position: relative;
 	    top: 50%;
 	    transform: translateY(-50%);
-	   	width: 50%;
+	   	width: 48%;
 	    padding: 40px;
 	    margin: 0 20px;
 	    opacity: 0.9;
 	    max-width: none;
-	    filter: drop-shadow(-2px 0px 3px rgba(0, 0, 0, 0.4));
+	    filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.4));
 	}
 
 	@include media('>=desktop') {
@@ -120,8 +120,8 @@
 }
 
 .hero__intro {
-	@include font-size(20);
-    @include line-height(28);
+	@include font-size(19);
+    @include line-height(27);
 
     @include media('>=500px') {
 		@include font-size(22);
